# Cog_TH

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  devin_client.py  github_client.py  main.py  prompts.py  report.py  store.py  summary.py
docs/: devin-issue-runner.workflow.yml
tests/: test_api.py  test_prompts.py  test_store.py
