[project]
name = "cognition-devin-autopilot"
version = "0.1.0"
description = "Event-driven automation: GitHub issue -> Devin remediation session -> leadership report."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
