[project]
name = "devin-issue-runner"
version = "0.1.0"
description = "Workflow service: GitHub issue -> Devin session -> PR/status feedback."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
